syntax = "proto3";
package broker.auctioneer.v1;
option go_package = "github.com/textileio/broker-core/gen/broker/auctioneer/v1;auctioneer";

import "google/protobuf/timestamp.proto";

message Auction {
    string id = 1;
    string deal_id = 2;
    uint64 deal_size = 3;
    uint64 deal_duration = 4;
    Status status = 5;
    map<string, Bid> bids = 6;
    repeated string winning_bids = 7;
    google.protobuf.Timestamp started_at = 8;
    int64 duration = 9;
    string error = 10;

    enum Status {
        STATUS_UNSPECIFIED = 0;
        STATUS_QUEUED = 1;
        STATUS_STARTED = 2;
        STATUS_ENDED = 3;
        STATUS_ERROR = 4;
    }

    message Bid {
        string from = 1;
        int64 nano_fil = 2;
        google.protobuf.Timestamp received_at = 3;
    }
}

message ReadyToAuctionRequest {
    string deal_id = 1;
    uint64 deal_size = 2;
    uint64 deal_duration = 3;
}

message ReadyToAuctionResponse {
    string id = 1;
}

message GetAuctionRequest {
    string id = 1;
}

message GetAuctionResponse {
    Auction auction = 1;
}

service APIService {
    rpc ReadyToAuction(ReadyToAuctionRequest) returns (ReadyToAuctionResponse) {}
    rpc GetAuction(GetAuctionRequest) returns (GetAuctionResponse) {}
}
